--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,300;6..12,400;6..12,500;6..12,600;6..12,700&display=swap");
+
 @tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 /* Scrollbar modification */
 
@@ -19,13 +23,11 @@
   border-radius: 10px;
 }
 
-@tailwind components;
-@tailwind utilities;
-
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Nunito Sans", sans-serif;
 }
 
 /* Add this CSS to your stylesheet or component styles */
